// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datastar PatchElements → DOM snapshots > mode=after: inserts after target > after mode result 1`] = `
"
    <div id="content">Initial content</div><div id="after-content">After</div>
    <div id="sidebar">Sidebar</div>
    <ul id="list"></ul>
    <div id="test-results">
      <p>Click "Run Tests" to start.</p>
    </div>
  "
`;

exports[`Datastar PatchElements → DOM snapshots > mode=append: appends children to target > append mode result 1`] = `"<li>Item 1</li><li>Item 2</li>"`;

exports[`Datastar PatchElements → DOM snapshots > mode=before: inserts before target > before mode result 1`] = `
"
    <div id="before-content">Before</div><div id="content">Initial content</div>
    <div id="sidebar">Sidebar</div>
    <ul id="list"></ul>
    <div id="test-results">
      <p>Click "Run Tests" to start.</p>
    </div>
  "
`;

exports[`Datastar PatchElements → DOM snapshots > mode=inner: replaces children of selector target > inner mode result 1`] = `"<span class="updated">New content</span>"`;

exports[`Datastar PatchElements → DOM snapshots > mode=outer: replaces target element (matched by id) > outer mode result 1`] = `
"
    <div id="content" class="replaced"><h2>Replaced!</h2></div>
    <div id="sidebar">Sidebar</div>
    <ul id="list"></ul>
    <div id="test-results">
      <p>Click "Run Tests" to start.</p>
    </div>
  "
`;

exports[`Datastar PatchElements → DOM snapshots > mode=prepend: prepends children to target > prepend mode result 1`] = `"<li>First</li>"`;

exports[`Datastar PatchElements → DOM snapshots > mode=remove: removes target element > remove mode result 1`] = `
"
    <div id="content">Initial content</div>
    
    <ul id="list"></ul>
    <div id="test-results">
      <p>Click "Run Tests" to start.</p>
    </div>
  "
`;

exports[`HTML Template Snapshots > snapshot: home.html structure is stable > home.html <body> structure 1`] = `
[
  {
    "class": "app-layout",
    "dataAttrs": undefined,
    "id": undefined,
    "tag": "div",
  },
  {
    "class": undefined,
    "dataAttrs": {
      "init": "@get('/sse')",
    },
    "id": undefined,
    "tag": "div",
  },
]
`;

exports[`HTML Template Snapshots > snapshot: home.html structure is stable > home.html <head> 1`] = `
[
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": "/assets/icons/logo.svg",
    "id": undefined,
    "rel": "icon",
    "src": null,
    "tag": "link",
    "type": "image/svg+xml",
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "title",
    "type": null,
  },
  {
    "href": "/assets/css/pages/home.css",
    "id": undefined,
    "rel": "stylesheet",
    "src": null,
    "tag": "link",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": "/assets/js/datastar-core.js",
    "tag": "script",
    "type": "module",
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "script",
    "type": null,
  },
]
`;

exports[`HTML Template Snapshots > snapshot: login.html structure is stable > login.html <body> structure 1`] = `
[
  {
    "class": "auth-container",
    "dataAttrs": undefined,
    "id": undefined,
    "tag": "div",
  },
]
`;

exports[`HTML Template Snapshots > snapshot: login.html structure is stable > login.html <head> 1`] = `
[
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": "/assets/icons/logo.svg",
    "id": undefined,
    "rel": "icon",
    "src": null,
    "tag": "link",
    "type": "image/svg+xml",
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "title",
    "type": null,
  },
  {
    "href": "/assets/css/pages/login.css",
    "id": undefined,
    "rel": "stylesheet",
    "src": null,
    "tag": "link",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": "/assets/js/datastar-core.js",
    "tag": "script",
    "type": "module",
  },
]
`;

exports[`HTML Template Snapshots > snapshot: register.html structure is stable > register.html <body> structure 1`] = `
[
  {
    "class": "auth-container",
    "dataAttrs": undefined,
    "id": undefined,
    "tag": "div",
  },
]
`;

exports[`HTML Template Snapshots > snapshot: register.html structure is stable > register.html <head> 1`] = `
[
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": "/assets/icons/logo.svg",
    "id": undefined,
    "rel": "icon",
    "src": null,
    "tag": "link",
    "type": "image/svg+xml",
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "title",
    "type": null,
  },
  {
    "href": "/assets/css/pages/register.css",
    "id": undefined,
    "rel": "stylesheet",
    "src": null,
    "tag": "link",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": "/assets/js/datastar-core.js",
    "tag": "script",
    "type": "module",
  },
]
`;

exports[`HTML Template Snapshots > snapshot: test.html structure is stable > test.html <body> structure 1`] = `
[
  {
    "class": "app-layout",
    "dataAttrs": undefined,
    "id": undefined,
    "tag": "div",
  },
]
`;

exports[`HTML Template Snapshots > snapshot: test.html structure is stable > test.html <head> 1`] = `
[
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "meta",
    "type": null,
  },
  {
    "href": "/assets/icons/logo.svg",
    "id": undefined,
    "rel": "icon",
    "src": null,
    "tag": "link",
    "type": "image/svg+xml",
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": null,
    "tag": "title",
    "type": null,
  },
  {
    "href": "/assets/css/pages/test.css",
    "id": undefined,
    "rel": "stylesheet",
    "src": null,
    "tag": "link",
    "type": null,
  },
  {
    "href": null,
    "id": undefined,
    "rel": null,
    "src": "/assets/js/datastar-core.js",
    "tag": "script",
    "type": "module",
  },
]
`;

exports[`Partial template snapshots > home_overview.html partial snapshot > home_overview cards 1`] = `
[
  {
    "body": "Browse your movie collection.",
    "header": "Movies",
  },
  {
    "body": "Explore TV series and seasons.",
    "header": "Series",
  },
  {
    "body": "Manage your account and preferences.",
    "header": "Settings",
  },
]
`;

exports[`Partial template snapshots > snapshot CSS files for unexpected changes > css/common.css 1`] = `
"/* ===== Rama Platform — Common CSS =====
 * GNOME/libadwaita-inspired design system
 * Uses CSS Custom Properties for theming
 * Property definitions come from dark.css / light.css
 *
 * ❌4: NO page-specific CSS — all component styles live here.
 */

/* ── Base Reset ── */
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-family: system-ui, -apple-system, 'Segoe UI', sans-serif;
  font-size: 16px;
  line-height: 1.6;
  background-color: var(--bg-primary);
  color: var(--fg-primary);
  height: 100%;
}

body {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--bg-primary);
}

/* ── Floating Window (login, register, test pages) ── */
.floating-window {
  width: min(480px, 95vw);
  margin: 32px auto;
  padding: 36px 32px;
  border-radius: 16px;
  background-color: var(--bg-secondary);
  box-shadow:
    0 4px 24px rgba(0, 0, 0, 0.25),
    0 1px 4px rgba(0, 0, 0, 0.15);
  border: 1px solid var(--border-color);
}

.floating-window.test-harness {
  width: min(720px, 95vw);
}

/* ── App Header ── */
.app-header {
  text-align: center;
  margin-bottom: 28px;
}

.app-header h1 {
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: -0.01em;
  color: var(--fg-primary);
}

.app-header .subtitle {
  font-size: 0.9rem;
  color: var(--fg-muted);
  margin-top: 6px;
}

/* ── App Layout: Sidebar + Main (home.html) ── */
.app-layout {
  width: min(960px, 95vw);
  height: min(680px, 90vh);
  border-radius: 16px;
  background-color: var(--bg-secondary);
  box-shadow:
    0 4px 24px rgba(0, 0, 0, 0.25),
    0 1px 4px rgba(0, 0, 0, 0.15);
  border: 1px solid var(--border-color);
  display: flex;
  flex-direction: row;
  overflow: hidden;
}

/* ── Sidebar ── */
.sidebar {
  width: 220px;
  flex-shrink: 0;
  background-color: var(--bg-sidebar);
  border-right: 1px solid var(--border-color);
  padding: 12px 8px;
  display: flex;
  flex-direction: column;
  gap: 4px;
  overflow-y: auto;
}

.sidebar-header {
  padding: 10px 14px 16px;
  border-bottom: 1px solid var(--border-color);
  margin-bottom: 4px;
}

.sidebar-title {
  font-size: 1.1rem;
  font-weight: 700;
  color: var(--fg-primary);
  letter-spacing: -0.01em;
}

.sidebar-nav {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.sidebar-footer {
  margin-top: auto;
  padding-top: 8px;
  border-top: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  gap: 2px;
}

/* ── Nav Sections ── */
.nav-section {
  margin-top: 12px;
}

.nav-section-title {
  display: block;
  padding: 6px 14px 8px;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  color: var(--fg-muted);
}

/* ── Navigation Items ── */
.nav-item {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 10px 14px;
  border-radius: 10px;
  font-size: 0.95rem;
  font-weight: 500;
  color: var(--fg-primary);
  text-decoration: none;
  transition: background-color 0.15s ease, color 0.15s ease;
  cursor: pointer;
  border: none;
  background: none;
  width: 100%;
  text-align: left;
}

.nav-item:hover {
  background-color: var(--bg-hover);
}

.nav-item.active {
  background-color: var(--accent-bg);
  color: var(--accent-fg);
  font-weight: 600;
}

.nav-icon {
  width: 20px;
  height: 20px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  font-size: 1.1rem;
}

.nav-label {
  flex: 1;
  line-height: 1.3;
}

/* ── Main Content Area ── */
.main-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.content-header {
  padding: 16px 24px;
  background-color: var(--bg-header);
  border-bottom: 1px solid var(--border-color);
  flex-shrink: 0;
}

.content-header h1 {
  font-size: 1.15rem;
  font-weight: 600;
  letter-spacing: -0.01em;
  color: var(--fg-primary);
}

.content-body {
  flex: 1;
  padding: 24px;
  overflow-y: auto;
  background-color: var(--bg-primary);
}

.content-body h2 {
  font-size: 1.2rem;
  font-weight: 700;
  margin-bottom: 8px;
}

/* ── Cards ── */
.card-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
  gap: 16px;
  margin-top: 16px;
}

.card {
  background-color: var(--bg-card);
  border-radius: 12px;
  padding: 20px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
  border: 1px solid var(--border-color);
  transition: box-shadow 0.15s ease, transform 0.1s ease;
}

.card:hover {
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
}

.card-header {
  font-size: 1rem;
  font-weight: 700;
  margin-bottom: 8px;
  color: var(--fg-primary);
}

.card-body {
  font-size: 0.9rem;
  color: var(--fg-muted);
}

.card + .card {
  margin-top: 16px;
}

/* ── Placeholder State ── */
.placeholder-state {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 48px 24px;
  color: var(--fg-muted);
  text-align: center;
}

.placeholder-icon {
  font-size: 3rem;
  margin-bottom: 12px;
  opacity: 0.6;
}

.placeholder-state p {
  font-size: 0.95rem;
}

/* ── Buttons ── */
.btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  padding: 10px 20px;
  border-radius: 10px;
  font-size: 0.9rem;
  font-weight: 600;
  border: none;
  cursor: pointer;
  transition: background-color 0.15s ease, box-shadow 0.15s ease, transform 0.1s ease;
  text-decoration: none;
  font-family: inherit;
}

.btn:active {
  transform: scale(0.97);
}

.btn-primary {
  background-color: var(--accent);
  color: #fff;
}

.btn-primary:hover {
  background-color: var(--accent-hover);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

.btn-secondary {
  background-color: var(--bg-hover);
  color: var(--fg-primary);
}

.btn-secondary:hover {
  background-color: var(--border-color);
}

.btn-ghost {
  background: transparent;
  color: var(--fg-muted);
  padding: 8px 14px;
}

.btn-ghost:hover {
  background-color: var(--bg-hover);
  color: var(--fg-primary);
}

.btn-logout {
  width: 100%;
  justify-content: flex-start;
  font-weight: 500;
  font-size: 0.95rem;
}

.btn-danger {
  background-color: var(--danger);
  color: #fff;
}

.btn-danger:hover {
  background-color: var(--danger-hover);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

/* ── Auth Form (login, register) ── */
.auth-form {
  display: flex;
  flex-direction: column;
}

.form-group {
  margin-bottom: 18px;
}

.form-group label {
  display: block;
  font-size: 0.85rem;
  font-weight: 600;
  margin-bottom: 6px;
  color: var(--fg-secondary);
}

.form-group input {
  width: 100%;
  padding: 10px 14px;
  border-radius: 10px;
  border: 1px solid var(--border-color);
  background-color: var(--bg-primary);
  color: var(--fg-primary);
  font-size: 0.95rem;
  font-family: inherit;
  transition: border-color 0.15s ease, box-shadow 0.15s ease;
  outline: none;
}

.form-group input:focus {
  border-color: var(--accent);
  box-shadow: 0 0 0 3px var(--accent-bg);
}

.form-group input::placeholder {
  color: var(--fg-muted);
}

.form-footer {
  text-align: center;
  margin-top: 20px;
  font-size: 0.85rem;
  color: var(--fg-muted);
}

.link {
  color: var(--accent);
  text-decoration: none;
  font-weight: 600;
}

.link:hover {
  text-decoration: underline;
}

/* ── Auth form button full width ── */
.auth-form .btn {
  width: 100%;
  margin-top: 8px;
}

/* ── Test Harness (test.html) ── */
.test-harness .app-header {
  margin-bottom: 20px;
}

.test-controls {
  margin-bottom: 20px;
  text-align: center;
}

.test-results {
  background-color: var(--bg-primary);
  border-radius: 12px;
  border: 1px solid var(--border-color);
  padding: 20px;
  min-height: 120px;
  max-height: 400px;
  overflow-y: auto;
  font-size: 0.9rem;
}

.test-results .text-muted {
  text-align: center;
  padding: 20px 0;
}

/* Test result indicators */
.test-pass {
  background-color: var(--success);
  color: #fff;
  padding: 10px 14px;
  border-radius: 8px;
  margin-bottom: 8px;
  font-size: 0.85rem;
}

.test-fail {
  background-color: var(--danger);
  color: #fff;
  padding: 10px 14px;
  border-radius: 8px;
  margin-bottom: 8px;
  font-size: 0.85rem;
}

.test-info {
  background-color: var(--accent-bg);
  color: var(--accent-fg);
  padding: 10px 14px;
  border-radius: 8px;
  margin-bottom: 8px;
  font-size: 0.85rem;
}

.test-score {
  text-align: center;
  font-size: 1.2rem;
  font-weight: 700;
  padding: 16px;
  margin-top: 12px;
  border-radius: 10px;
  background-color: var(--bg-card);
  border: 1px solid var(--border-color);
}

/* ── Error / Status ── */
.error-msg {
  background-color: var(--danger-bg);
  color: var(--danger);
  padding: 10px 14px;
  border-radius: 8px;
  font-size: 0.85rem;
  margin-bottom: 16px;
}

/* ── Utilities ── */
.spacer { flex: 1; }
.text-muted { color: var(--fg-muted); }
.text-center { text-align: center; }
.mt-2 { margin-top: 8px; }
.mt-4 { margin-top: 16px; }
.mt-6 { margin-top: 24px; }
"
`;

exports[`Partial template snapshots > snapshot CSS files for unexpected changes > css/dark.css 1`] = `
"/* ===== Tokyo Night Dark Theme ===== */
:root {
  /* Background hierarchy */
  --bg-primary: #1f2335;
  --bg-secondary: #24283b;
  --bg-header: #29304d;
  --bg-sidebar: #29304d;
  --bg-card: #363c50;
  --bg-hover: #3b4261;

  /* Foreground */
  --fg-primary: #c0caf5;
  --fg-secondary: #a9b1d6;
  --fg-muted: #565f89;

  /* Borders */
  --border-color: #3b4261;

  /* Accent — blue */
  --accent: #7aa2f7;
  --accent-hover: #89b4ff;
  --accent-bg: rgba(122, 162, 247, 0.12);
  --accent-fg: #7aa2f7;

  /* Semantic */
  --danger: #f7768e;
  --danger-hover: #ff8da1;
  --danger-bg: rgba(247, 118, 142, 0.12);
  --success: #9ece6a;
}
"
`;

exports[`Partial template snapshots > snapshot CSS files for unexpected changes > css/light.css 1`] = `
"/* ===== Tokyo Night Light Theme ===== */
:root {
  /* Background hierarchy */
  --bg-primary: #d5d6db;
  --bg-secondary: #e0e1e6;
  --bg-header: #cbccd1;
  --bg-sidebar: #d5d6db;
  --bg-card: #c8cad3;
  --bg-hover: #cbccd1;

  /* Foreground */
  --fg-primary: #565f89;
  --fg-secondary: #6a7399;
  --fg-muted: #a9b1d6;

  /* Borders */
  --border-color: #a9b1d6;

  /* Accent — blue */
  --accent: #2e7de9;
  --accent-hover: #1a6fd4;
  --accent-bg: rgba(46, 125, 233, 0.12);
  --accent-fg: #2e7de9;

  /* Semantic */
  --danger: #c6262e;
  --danger-hover: #a51d2b;
  --danger-bg: rgba(198, 38, 46, 0.1);
  --success: #587d0c;
}
"
`;

exports[`Test sequence DOM snapshots (mirrors Rust test.rs) > Full sequence: Phase A → C → D combined snapshot > full sequence A+C+D 1`] = `
"
    <p class="text-muted">Click "Run Tests" to start.</p>
  <div id="test-1" class="test-pass" data-phase="C" data-type="modified">✅ Phase C: Modified content — cache miss (different hash)</div><div id="test-2" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 2 received</div><div id="test-3" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 3 received</div><div id="test-4" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 4 received</div><div id="ooo-3" class="test-pass" data-phase="D" data-type="out-of-order">✅ Out-of-order: Event 3 (sent 1st)</div><div id="ooo-1" class="test-pass" data-phase="D" data-type="out-of-order">✅ Out-of-order: Event 1 (sent 2nd)</div><div id="ooo-2" class="test-pass" data-phase="D" data-type="out-of-order">✅ Out-of-order: Event 2 (sent 3rd)</div>"
`;

exports[`Test sequence DOM snapshots (mirrors Rust test.rs) > Phase A: 4 fresh events patch into #test-results > phase-a results 1`] = `
"
    <p class="text-muted">Click "Run Tests" to start.</p>
  <div id="test-1" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 1 received</div><div id="test-2" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 2 received</div><div id="test-3" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 3 received</div><div id="test-4" class="test-pass" data-phase="A" data-type="fresh">✅ Fresh A: Event 4 received</div>"
`;

exports[`Test sequence DOM snapshots (mirrors Rust test.rs) > Phase C: modified event replaces test-1 by id (outer mode) > phase-c modified test-1 1`] = `"<div id="test-1" class="test-pass" data-phase="C" data-type="modified">✅ Phase C: Modified content — cache miss (different hash)</div>"`;

exports[`Test sequence DOM snapshots (mirrors Rust test.rs) > Phase D: out-of-order events append in send order > phase-d out-of-order 1`] = `
"
    <p class="text-muted">Click "Run Tests" to start.</p>
  <div id="ooo-3" class="test-pass" data-phase="D" data-type="out-of-order">✅ Out-of-order: Event 3 (sent 1st)</div><div id="ooo-1" class="test-pass" data-phase="D" data-type="out-of-order">✅ Out-of-order: Event 1 (sent 2nd)</div><div id="ooo-2" class="test-pass" data-phase="D" data-type="out-of-order">✅ Out-of-order: Event 2 (sent 3rd)</div>"
`;
